--- a/config/security/200-serviceaccount.yaml
+++ b/config/security/200-serviceaccount.yaml
@@ -18,7 +18,7 @@ metadata:
   name: security-controller
   namespace: knative-security
   labels:
-    events.cloud.google.com/release: devel
+    security.knative.dev/release: devel
 
 ---
 
@@ -28,4 +28,4 @@ metadata:
   name: security-webhook
   namespace: knative-security
   labels:
-    events.cloud.google.com/release: devel
+    security.knative.dev/release: devel
