--- a/config/security/201-role.yaml
+++ b/config/security/201-role.yaml
@@ -19,7 +19,7 @@ metadata:
   name: security-controller
   namespace: knative-security
   labels:
-    events.cloud.google.com/release: devel
+    security.knative.dev/release: devel
 rules:
 - apiGroups:
     - ""
