--- a/config/security/400-webhook-service.yaml
+++ b/config/security/400-webhook-service.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Google LLC
+# Copyright 2019 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,26 +11,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
+
+apiVersion: v1
+kind: Service
 metadata:
-  name: eventpolicies.security.knative.dev
   labels:
+    role: webhook
     security.knative.dev/release: devel
-    security.knative.dev/crd-install: "true"
+  name: webhook
+  namespace: knative-security
 spec:
-  group: security.knative.dev
-  version: v1alpha1
-  names:
-    kind: EventPolicy
-    plural: eventpolicies
-    singular: eventpolicy
-    categories:
-    - all
-    - knative
-    - security
-  scope: Namespaced
-  additionalPrinterColumns:
-    - name: Age
-      type: date
-      JSONPath: .metadata.creationTimestamp
+  ports:
+    - port: 443
+      targetPort: 8443
+  selector:
+    role: webhook
