--- a/config/security/500-webhook-config-validation.yaml
+++ b/config/security/500-webhook-config-validation.yaml
@@ -11,26 +11,24 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
+
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: ValidatingWebhookConfiguration
 metadata:
-  name: eventpolicies.security.knative.dev
+  name: config.webhook.security.knative.dev
   labels:
     security.knative.dev/release: devel
-    security.knative.dev/crd-install: "true"
-spec:
-  group: security.knative.dev
-  version: v1alpha1
-  names:
-    kind: EventPolicy
-    plural: eventpolicies
-    singular: eventpolicy
-    categories:
-    - all
-    - knative
-    - security
-  scope: Namespaced
-  additionalPrinterColumns:
-    - name: Age
-      type: date
-      JSONPath: .metadata.creationTimestamp
+webhooks:
+  - admissionReviewVersions:
+      - v1beta1
+    clientConfig:
+      service:
+        name: webhook
+        namespace: knative-security
+    failurePolicy: Fail
+    sideEffects: None
+    name: config.webhook.security.knative.dev
+    namespaceSelector:
+      matchExpressions:
+        - key: security.knative.dev/release
+          operator: Exists
