Apply suggestions from code review
suggestions

Co-Authored-By: Adam Harwayne <harwayne@google.com>

--- a/config/security/201-clusterrole.yaml
+++ b/config/security/201-clusterrole.yaml
@@ -99,9 +99,9 @@ rules:
     - list
 
 - apiGroups:
-    - "eventing.knative.dev"
+    - eventing.knative.dev
   resources:
-    - "brokers"
+    - brokers
   verbs:
     - get
     - list
