--- a/config/security/400-webhook-service.yaml
+++ b/config/security/400-webhook-service.yaml
@@ -16,13 +16,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    role: webhook
+    role: security-webhook
     security.knative.dev/release: devel
-  name: webhook
+  name: security-webhook
   namespace: knative-security
 spec:
   ports:
     - port: 443
       targetPort: 8443
   selector:
-    role: webhook
+    role: security-webhook
