--- a/config/security/500-webhook-secret.yaml
+++ b/config/security/500-webhook-secret.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: webhook-certs
+  name: security-webhook-certs
   namespace: knative-security
   labels:
     security.knative.dev/release: devel
