--- a/docs/examples/cloudbuildsource/cloudbuildsource.yaml
+++ b/docs/examples/cloudbuildsource/cloudbuildsource.yaml
@@ -3,12 +3,12 @@ kind: CloudBuildSource
 metadata:
   name: cloudbuildsource-test
 spec:
-  topic: cloud-builds
   sink:
     ref:
       apiVersion: v1
       kind: Service
       name: event-display
+  googleServiceAccount: cre-pubsub@xiyue-opensource-project-gke.iam.gserviceaccount.com
 
 #    # If running in GKE, we will ask the metadata server, change this if required.
 #  project: MY_PROJECT
