--- a/docs/examples/cloudpubsubsource/cloudpubsubsource.yaml
+++ b/docs/examples/cloudpubsubsource/cloudpubsubsource.yaml
@@ -1,3 +1,17 @@
+# Copyright 2020 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 apiVersion: events.cloud.google.com/v1alpha1
 kind: CloudPubSubSource
 metadata:
@@ -9,7 +23,6 @@ spec:
       apiVersion: v1
       kind: Service
       name: event-display
-  googleServiceAccount: cre-pubsub@xiyue-opensource-project-gke.iam.gserviceaccount.com
 
 #    # If running in GKE, we will ask the metadata server, change this if required.
 #  project: MY_PROJECT
