--- a/config/core/resources/topic.yaml
+++ b/config/core/resources/topic.yaml
@@ -21,7 +21,6 @@ metadata:
     duck.knative.dev/addressable: "true"
 spec:
   group: pubsub.cloud.google.com
-  version: v1alpha1
   names:
     kind: Topic
     plural: topics
@@ -46,6 +45,14 @@ spec:
     - name: Age
       type: date
       JSONPath: .metadata.creationTimestamp
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+    - name: v1beta1
+      served: true
+      storage: false
+  # They happen to have the same schema today. They will likely diverge in the future.
   validation:
     openAPIV3Schema:
       properties:
@@ -106,3 +113,4 @@ spec:
               properties:
                 url:
                   type: string
+
