--- a/config/core/resources/pullsubscription.yaml
+++ b/config/core/resources/pullsubscription.yaml
@@ -31,6 +31,13 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
+  preserveUnknownFields: false
+  conversion:
+    strategy: Webhook
+    webhookClientConfig:
+      service:
+        name: webhook
+        namespace: cloud-run-events
   additionalPrinterColumns:
     - name: Ready
       type: string
@@ -51,9 +58,11 @@ spec:
   # They happen to have the same schema today. They will likely diverge in the future.
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
           # TODO: update the OpenAPI to be much more robust.
+          type: object
           required:
             - sink
             - topic
@@ -70,30 +79,32 @@ spec:
             sink:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the sink."
-              anyOf:
-                - type: object
+              properties:
+                uri:
+                  type: string
+                  minLength: 1
+                ref:
+                  type: object
+                  required:
+                    - apiVersion
+                    - kind
+                    - name
                   properties:
-                    uri:
+                    apiVersion:
                       type: string
                       minLength: 1
-                - type: object
-                  properties:
-                    ref:
-                      type: object
-                      required:
-                        - apiVersion
-                        - kind
-                        - name
-                      properties:
-                        apiVersion:
-                          type: string
-                          minLength: 1
-                        kind:
-                          type: string
-                          minLength: 1
-                        name:
-                          type: string
-                          minLength: 1
+                    kind:
+                      type: string
+                      minLength: 1
+                    name:
+                      type: string
+                      minLength: 1
+              anyOf:
+                - properties:
+                    uri:
+                      minLength: 1
+                - properties:
+                    ref: {}
             transformer:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the transformer."
