--- a/config/core/resources/pullsubscription.yaml
+++ b/config/core/resources/pullsubscription.yaml
@@ -73,6 +73,13 @@ spec:
             secret:
               type: object
               description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              properties:
+                name:
+                  type: string
+                key:
+                  type: string
+                optional:
+                  type: bool
             project:
               type: string
               description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
@@ -108,6 +115,7 @@ spec:
             transformer:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the transformer."
+              x-kubernetes-preserve-unknown-fields: true
             ceOverrides:
               type: object
               description: "Defines overrides to control modifications of the event sent to the sink."
@@ -115,6 +123,7 @@ spec:
                 extensions:
                   type: object
                   description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
+                  x-kubernetes-preserve-unknown-fields: true
             mode:
               type: string
               enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
@@ -131,8 +140,8 @@ spec:
             retentionDuration:
               type: string
               description: "How long to retain messages in backlog, from the time of publish. If retainAckedMessages is true, this duration affects the retention of acknowledged messages, otherwise only unacknowledged messages are retained. Defaults to 7 days (`168h`). Cannot be longer than 7 days or shorter than 10 minutes. Valid time units are `s`, `m`, `h`."
-          type: object
         status:
+          type: object
           properties:
             observedGeneration:
               type: integer
@@ -167,4 +176,3 @@ spec:
               type: string
             subscriptionId:
               type: string
-          type: object
