--- a/config/core/resources/cloudauditlogssource.yaml
+++ b/config/core/resources/cloudauditlogssource.yaml
@@ -27,7 +27,6 @@ metadata:
   name: cloudauditlogssources.events.cloud.google.com
 spec:
   group: events.cloud.google.com
-  version: v1alpha1
   names:
     categories:
     - all
@@ -39,6 +38,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
+  preserveUnknownFields: false
   additionalPrinterColumns:
     - name: Ready
       type: string
@@ -49,10 +49,20 @@ spec:
     - name: Age
       type: date
       JSONPath: .metadata.creationTimestamp
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
+          type: object
+          required:
+            - sink
+            - serviceName
+            - methodName
           properties:
             googleServiceAccount:
               type: string
@@ -60,6 +70,13 @@ spec:
             secret:
               type: object
               description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              properties:
+                name:
+                  type: string
+                key:
+                  type: string
+                optional:
+                  type: boolean
             serviceAccountName:
               type: string
               description: "Service Account to run Receive Adapter as. If omitted, uses 'default'."
@@ -78,10 +95,36 @@ spec:
             sink:
               type: object
               description: "Sink which receives the notifications."
-          required:
-          - sink
-          - serviceName
-          - methodName
+              properties:
+                uri:
+                  type: string
+                  minLength: 1
+                ref:
+                  type: object
+                  required:
+                    - apiVersion
+                    - kind
+                    - name
+                  properties:
+                    apiVersion:
+                      type: string
+                      minLength: 1
+                    kind:
+                      type: string
+                      minLength: 1
+                    namespace:
+                      type: string
+                    name:
+                      type: string
+                      minLength: 1
+            ceOverrides:
+              type: object
+              description: "Defines overrides to control modifications of the event sent to the sink."
+              properties:
+                extensions:
+                  type: object
+                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
+                  x-kubernetes-preserve-unknown-fields: true
         status:
           type: object
           properties:
@@ -108,15 +151,26 @@ spec:
                   type:
                     type: string
                 required:
-                - type
-                - status
+                  - type
+                  - status
+            serviceAccountName:
+              type: string
             sinkUri:
               type: string
+            ceAttributes:
+              type: array
+              items:
+                type: object
+                properties:
+                  type:
+                    type: string
+                  source:
+                    type: string
             projectId:
               type: string
             topicId:
               type: string
-            stackdriverSink:
-              type: string
             subscriptionId:
+              type: string
+            stackdriverSink:
               type: string
