Structural schema for Topic's status.

--- a/config/core/resources/topic.yaml
+++ b/config/core/resources/topic.yaml
@@ -120,6 +120,8 @@ spec:
                 required:
                   - type
                   - status
+            serviceAccountName:
+              type: string
             projectId:
               type: string
             topicId:
