--- a/config/core/resources/cloudschedulersource.yaml
+++ b/config/core/resources/cloudschedulersource.yaml
@@ -27,7 +27,6 @@ metadata:
   name: cloudschedulersources.events.cloud.google.com
 spec:
   group: events.cloud.google.com
-  version: v1alpha1
   names:
     categories:
     - all
@@ -39,6 +38,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
+  preserveUnknownFields: false
   additionalPrinterColumns:
     - name: Ready
       type: string
@@ -49,10 +49,21 @@ spec:
     - name: Age
       type: date
       JSONPath: .metadata.creationTimestamp
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
+          type: object
+          required:
+            - location
+            - schedule
+            - sink
+            - data
           properties:
             googleServiceAccount:
               type: string
@@ -60,9 +71,49 @@ spec:
             secret:
               type: object
               description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              properties:
+                name:
+                  type: string
+                key:
+                  type: string
+                optional:
+                  type: boolean
             project:
               type: string
-              description: "Google Cloud Project ID of the project into which the Scheduler job should be created. If omitted uses the Project ID from the GKE cluster metadata service."
+              description: "Google Cloud Project ID of the project into which the topic should be created. If omitted uses the Project ID from the GKE cluster metadata service."
+            sink:
+              type: object
+              description: "Sink which receives the notifications."
+              properties:
+                uri:
+                  type: string
+                  minLength: 1
+                ref:
+                  type: object
+                  required:
+                    - apiVersion
+                    - kind
+                    - name
+                  properties:
+                    apiVersion:
+                      type: string
+                      minLength: 1
+                    kind:
+                      type: string
+                      minLength: 1
+                    namespace:
+                      type: string
+                    name:
+                      type: string
+                      minLength: 1
+            ceOverrides:
+              type: object
+              description: "Defines overrides to control modifications of the event sent to the sink."
+              properties:
+                extensions:
+                  type: object
+                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
+                  x-kubernetes-preserve-unknown-fields: true
             location:
               type: string
               description: "Location to create the Scheduler job in."
@@ -72,49 +123,16 @@ spec:
             data:
               type: string
               description: "Data to send in the payload of the Event."
-            sink:
-              type: object
-              description: "Sink which receives the notifications."
-              anyOf:
-                - type: object
-                  properties:
-                    uri:
-                      type: string
-                      minLength: 1
-                - type: object
-                  properties:
-                    ref:
-                      type: object
-                      required:
-                        - apiVersion
-                        - kind
-                        - name
-                      properties:
-                        apiVersion:
-                          type: string
-                          minLength: 1
-                        kind:
-                          type: string
-                          minLength: 1
-                        name:
-                          type: string
-                          minLength: 1
-            ceOverrides:
-              type: object
-              description: "Defines overrides to control modifications of the event sent to the sink."
-              properties:
-                extensions:
-                  type: object
-                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
-          required:
-          - location
-          - schedule
-          - sink
-          - data
         status:
+          type: object
           properties:
+            observedGeneration:
+              type: integer
+              format: int64
             conditions:
+              type: array
               items:
+                type: object
                 properties:
                   lastTransitionTime:
                     # we use a string in the stored object but a wrapper object
@@ -131,18 +149,26 @@ spec:
                   type:
                     type: string
                 required:
-                - type
-                - status
-                type: object
-              type: array
+                  - type
+                  - status
+            serviceAccountName:
+              type: string
             sinkUri:
               type: string
+            ceAttributes:
+              type: array
+              items:
+                type: object
+                properties:
+                  type:
+                    type: string
+                  source:
+                    type: string
             projectId:
               type: string
             topicId:
               type: string
-            notificationId:
-              type: string
             subscriptionId:
               type: string
-          type: object
+            jobName:
+              type: string
