--- a/hack/crdgeneration/snippets/pubsub_spec.yaml
+++ b/hack/crdgeneration/snippets/pubsub_spec.yaml
@@ -1,5 +1,5 @@
-{{ replace_with 0 "source_spec" }}
-{{ replace_with 0 "identity_spec" }}
+{{- replace_with 0 "source_spec" }}
+{{- replace_with 0 "identity_spec" }}
 secret:
   type: object
   description: >
