--- a/config/core/resources/cloudauditlogssource.yaml
+++ b/config/core/resources/cloudauditlogssource.yaml
@@ -11,6 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# This is a generated file, do not alter it.
 
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -64,37 +65,10 @@ spec:
             - serviceName
             - methodName
           properties:
-            googleServiceAccount:
-              type: string
-              description: "GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service account must be a valid Google service account (see https://cloud.google.com/iam/docs/service-accounts)."
-            secret:
-              type: object
-              description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
-              properties:
-                name:
-                  type: string
-                key:
-                  type: string
-                optional:
-                  type: boolean
-            serviceAccountName:
-              type: string
-              description: "Service Account to run Receive Adapter as. If omitted, uses 'default'."
-            project:
-              type: string
-              description: "Google Cloud Project ID of the project into which the topic should be created. If omitted uses the Project ID from the GKE cluster metadata service."
-            serviceName:
-              type: string
-              description: "The GCP service providing audit logs."
-            methodName:
-              type: string
-              description: "The name of the service method or operation. For API calls, this should be the name of the API method."
-            resourceName:
-              type: string
-              description: "The resource or collection that is the target of the operation. The name is a scheme-less URI, not including the API service name. If omitted, audit log events matching service and method will be pulled for all resources."
             sink:
               type: object
-              description: "Sink which receives the notifications."
+              description: >
+                Sink which receives the notifications.
               properties:
                 uri:
                   type: string
@@ -119,12 +93,46 @@ spec:
                       minLength: 1
             ceOverrides:
               type: object
-              description: "Defines overrides to control modifications of the event sent to the sink."
+              description: >
+                Defines overrides to control modifications of the event sent to the sink.
               properties:
                 extensions:
                   type: object
-                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
+                  description: >
+                    Extensions specify what attribute are added or overridden on the outbound event. Each
+                    `Extensions` key-value pair are set on the event as an attribute extension independently.
                   x-kubernetes-preserve-unknown-fields: true
+            googleServiceAccount:
+              type: string
+              description: >
+                GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
+                account must be a valid Google service account (see
+                https://cloud.google.com/iam/docs/service-accounts)."
+            secret:
+              type: object
+              description: >
+                Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the
+                Subscription, only to poll it. The value of the secret entry must be a service account key in
+                the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).
+                Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              properties:
+                name:
+                  type: string
+                key:
+                  type: string
+                optional:
+                  type: boolean
+            project:
+              type: string
+              description: >
+                Google Cloud Project ID of the project into which the topic should be created. If omitted uses
+                the Project ID from the GKE cluster metadata service.
+            serviceName:
+              type: string
+            methodName:
+              type: string
+            resourceName:
+              type: string
         status:
           type: object
           properties:
@@ -137,8 +145,7 @@ spec:
                 type: object
                 properties:
                   lastTransitionTime:
-                    # we use a string in the stored object but a wrapper object
-                    # at runtime.
+                    # we use a string in the stored object but a wrapper object at runtime.
                     type: string
                   message:
                     type: string
@@ -174,3 +181,5 @@ spec:
               type: string
             stackdriverSink:
               type: string
+              description: >
+                ID of the Stackdriver sink used to publish audit log messages.
