--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,6 +31,11 @@ required = [
   name = "knative.dev/pkg"
   branch = "release-0.14"
 
+# Our master branch tracks knative/test-infra master or a release.
+[[override]]
+  name = "knative.dev/test-infra"
+  branch = "release-0.14"
+
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
